src/main/webapp/style-mobile.css
@font-face {
  font-family: Google;
  src: url(font/ProductSans-Regular.woff);
}

/* color theme */

.red {
  color: #cc0101;
}

.orange-background {
  background-color: #ff9902;
}

.yellow {
  color: #ffd966;
}

.green {
 color: #93c47d;
}

.green-background {
  background-color: #93c47d;
}

.blue {
  color: #6e9eeb;
}

.blue-background {
  background-color: #6e9eeb;
}

html, body {
  font: 100%/1.6 "Google", "Trebuchet MS", Helvetica, sans-serif;
  height: 100%;
  margin: 0px;
  padding: 0;
}

footer {
  background-color: #ffd966;
  color: black;
  height: 5%;
  margin: 0px;
  text-align: center;
}

/* nav bar (MOSTLY UNCHANGED) */

.header {
  display: flex;
  flex-flow: row nowrap;
  height: 10%; /* note: 100px -> 10% */
  justify-content: space-between;
  overflow: hidden;
  position: sticky;
}

.header-left {
  display: flex;
  flex: 1 1 auto;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-between;
  width: 80%;
  max-width: 700px;
  height: 100%;
}

.header-left a {
  height: 100%;
}

.header-left img {
  height: 100%;
  flex: 1 1 auto;
}

.header-right {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: center;
  height: 100%;
  max-width: 300px;
  width: 25%;
}

a:link, a:visited {
  color: black;
  text-decoration: none;
}

.nav-item {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
  padding: 0 20px 0 20px;
}

/* individual event display */

.event-display-container {
  /* the container for the entire page, minus nav bar */
  display: flex;
  flex-flow: column nowrap;
  font-size: 3vw;
  height: 85%;
  width: 100%;
}

.event-left-details {
  /* left (now top) side, with image, description, and tags */
  flex-grow: 1;
  overflow-y: scroll;
  display: flex;
  flex-flow: column nowrap;
}

.event-display-image {
  background-color: #93c47d;
  flex: 0 0 auto;
  height: 55vw;
  width: 100%;
}

.event-left-text {
  /* all text elements below the image */
  margin: 0 2% 5% 2%;
}

.event-display-header {
  /* header info with title and attendee count */
  display: flex;    
  flex-flow: column nowrap;
  margin-top: 5%;
}

.event-display-title {
  font-size: 5vw;
  font-weight: bold;
}

.event-display-description {
  margin-bottom: 5%;
}

.expand-details {
  background-color: #eee;
  cursor: pointer;
  display: flex;
  flex: 0 0 auto;
  height: 3%;
  justify-content: center;
  object-fit: contain;
  width: 100%;
}

.expand-details img {
  height: 50%;
  object-fit: contain;
  margin: auto;
}

.event-right-details {
  /* right (now bottom) side with date, time, location */
  align-items: center;
  background-color: #eee;
  display: flex;
  flex-flow: row nowrap;
  flex: 0 0 auto;
  font-size: 3vw;
  height: 0px;
  justify-content: space-around;
  margin: 0;
  overflow: hidden;
  transition: height .5s;
  width: 100%;
}

.event-right-details.expand {
  height: 40vw;
}

.event-time-location {
  margin: 3% 5%;
}

.event-display-options {
  display: flex;
  flex-flow: column nowrap;
  height: 100%;
  justify-content: space-around;
  width: 40%;
}

.save-event, .go-back {
  align-items: center;
  cursor: pointer;
  display: flex;
  height: 30%;
  justify-content: center;
  width: 80%;
}

.save-event {
  background-color: #ffd966;
}

.go-back {
  background-color: white;
}

.event-display-options h3 {
  width: 80%;
}

.share-container {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
  width: 80%;
}

.share-container img {
  cursor: pointer;
  height: 5vw;
}
.attendee-count {
  font-weight: bold;
}

/* Footer */
.footer {
  color: #aaa;
  margin-top: 200px;
  text-align: center;
}

.footer a {
  color: #aaa;
}


/* tags and tag colors */

.tag {
  color: white;
  font-weight: bold;
  border-radius: 1vw;
  margin: .5vw;
  padding: 1vw 2vw;
}

.tag.invert {
  border: .5vw;
  border-style: solid;
  border-radius: 1vw;
  margin: .5vw;
  padding: 1vw 2vw;
}

.blm {
  background-color: black;
}

.environment {
  background-color: #93c47d;
}

.volunteer {
  background-color: #ffb742;
}

.education {
  background-color: #6e9eeb;
}

.rainbow {
  background-color: #fdfdfd;
  color: black;
}

.blm-text {
  color: black;
}

.environment-text {
  color: #93c47d;
}

.volunteer-text {
  color: #ffb742;
}

.education-text {
  color: #6e9eeb;
}

.blm.invert {
  background-color: white;
  border-color: black;
  color: black;
}

.environment.invert {
  background-color: white;
  color: #93c47d;
}

.volunteer.invert {
  background-color: white;
  color: #ffb742;
}

.education.invert {
  background-color: white;
  color: #6e9eeb;
}

.rainbow.invert {
  color: black;
}

